2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* strip.c (handle_elf): Expand inlined function check_preserved.

2021-01-12  Mark Wielaard  <mark@klomp.org>

	* elflint.c (EXTRA_SHFLAGS): New define.
	(check_sections): Use EXTRA_SHFLAGS. Add SHF_GNU_RETAIN to
	ALL_SH_FLAGS.

2020-12-31  Sergei Trofimovich  <slyfox@gentoo.org>

	* elflint.c (section_flags_string): Add NEWFLAG for GNU_RETAIN,
	ORDERED and EXCLUDE.

2020-12-31  Sergei Trofimovich  <slyfox@gentoo.org>

	* elflint.c (section_flags_string): Update cp pointer after
	snprintf for unknown flags.

2020-12-16  Érico Nogueira  <ericonr@disroot.org>

	* readelf.c (qsort_r): Use qsort for improved portability.

2020-12-20  Dmitry V. Levin  <ldv@altlinux.org>

	* .gitignore: New file.

2020-12-12  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_sections): Handle SHF_GNU_RETAIN.
	* readelf.c (print_shdr): Likewise.

2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* *.c: Replace gettext(...) with _(...).

	* unstrip.c (_): Remove.

2020-12-15  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_symtab): Always print symbol name (if known)
	in error messages.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* ar.c (write_member, do_oper_insert): Fix spelling typo in comment.
	* elfclassify.c (issue, elf_issue, is_unstripped): Likewise.
	* elfcompress.c (process_file): Likewise.
	* elflint.c (be_quiet, check_gnu_hash): Likewise.
	* readelf.c (print_phdr, handle_gnu_hash,
	dwarf_locexpr_opcode_string): Likewise.
	* size.c (totals_class): Likewise.
	* strings.c (read_elf): Likewise.
	* strip.c (handle_elf): Likewise.

	* readelf.c (print_debug_addr_section): Fix spelling typo in error
	diagnostics.
	* strip.c (options): Fix spelling typos in argp help text.
	* strings.c (options): Likewise.
	* stack.c (options): Likewise.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>

	* unstrip.c (make_directories): Use ACCESSPERMS for mkdir.
	(handle_file): Use DEFFILEMODE for open with O_CREAT for ET_REL